// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar should render the component with no results 1`] = `
<div>
  <h1
    className="qa-tab-header__title c-tab-header__title"
  >
    <span
      className="c-tab-header__title__text"
    >
      Geen resultaten met '
      dam
      '
    </span>
  </h1>
</div>
`;

exports[`TabBar should render the component with results 1`] = `
<div>
  <h1
    className="qa-tab-header__title c-tab-header__title"
  >
    <span
      className="c-tab-header__title__text"
    >
      Resultaten met '
      dam
      '
    </span>
  </h1>
</div>
`;

exports[`TabBar should render the container 1`] = `
<TabBar
  dispatch={[Function]}
  numberOfDataResults={1}
  numberOfDatasetResults={1}
  searchQuery="dam"
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;
